src/main/java/com/intfic/game/enhanced/parser/BooleanParser.java
// Generated from /Users/noahohrner/OneDrive - University of Cambridge/Dissertation/Code/interactive-fiction/Boolean.g4 by ANTLR 4.9.1
package com.intfic.game.enhanced.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class BooleanParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		IS=1, IN=2, AND=3, OR=4, NOT=5, TRUE=6, FALSE=7, LT=8, LE=9, EQ=10, GT=11, 
		GE=12, LPAREN=13, RPAREN=14, QUOTE=15, SLASH=16, STRING=17, DECIMAL=18, 
		IDENTIFIER=19, BEGL=20, ENDL=21, SEP=22, WS=23;
	public static final int
		RULE_parse = 0, RULE_list = 1, RULE_stringlist = 2, RULE_numberlist = 3, 
		RULE_stringelems = 4, RULE_numberelems = 5, RULE_numbertype = 6, RULE_stringtype = 7, 
		RULE_booleantype = 8, RULE_expression = 9, RULE_nonboolcomparator = 10, 
		RULE_binary = 11, RULE_bool = 12;
	private static String[] makeRuleNames() {
		return new String[] {
			"parse", "list", "stringlist", "numberlist", "stringelems", "numberelems", 
			"numbertype", "stringtype", "booleantype", "expression", "nonboolcomparator", 
			"binary", "bool"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'IS'", "'IN'", "'AND'", "'OR'", "'NOT'", "'TRUE'", "'FALSE'", 
			"'<'", "'<='", "'='", "'>'", "'>='", "'('", "')'", "'\"'", "'/'", null, 
			null, null, "'['", "']'", "','"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "IS", "IN", "AND", "OR", "NOT", "TRUE", "FALSE", "LT", "LE", "EQ", 
			"GT", "GE", "LPAREN", "RPAREN", "QUOTE", "SLASH", "STRING", "DECIMAL", 
			"IDENTIFIER", "BEGL", "ENDL", "SEP", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Boolean.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public BooleanParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ParseContext extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode EOF() { return getToken(BooleanParser.EOF, 0); }
		public ParseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parse; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BooleanListener ) ((BooleanListener)listener).enterParse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BooleanListener ) ((BooleanListener)listener).exitParse(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BooleanVisitor ) return ((BooleanVisitor<? extends T>)visitor).visitParse(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParseContext parse() throws RecognitionException {
		ParseContext _localctx = new ParseContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_parse);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(26);
			expression();
			setState(27);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(BooleanParser.IDENTIFIER, 0); }
		public StringlistContext stringlist() {
			return getRuleContext(StringlistContext.class,0);
		}
		public NumberlistContext numberlist() {
			return getRuleContext(NumberlistContext.class,0);
		}
		public ListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BooleanListener ) ((BooleanListener)listener).enterList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BooleanListener ) ((BooleanListener)listener).exitList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BooleanVisitor ) return ((BooleanVisitor<? extends T>)visitor).visitList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ListContext list() throws RecognitionException {
		ListContext _localctx = new ListContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_list);
		try {
			setState(32);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(29);
				match(IDENTIFIER);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(30);
				stringlist();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(31);
				numberlist();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StringlistContext extends ParserRuleContext {
		public TerminalNode BEGL() { return getToken(BooleanParser.BEGL, 0); }
		public TerminalNode ENDL() { return getToken(BooleanParser.ENDL, 0); }
		public StringelemsContext stringelems() {
			return getRuleContext(StringelemsContext.class,0);
		}
		public StringlistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stringlist; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BooleanListener ) ((BooleanListener)listener).enterStringlist(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BooleanListener ) ((BooleanListener)listener).exitStringlist(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BooleanVisitor ) return ((BooleanVisitor<? extends T>)visitor).visitStringlist(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StringlistContext stringlist() throws RecognitionException {
		StringlistContext _localctx = new StringlistContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_stringlist);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(34);
			match(BEGL);
			setState(36);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==STRING || _la==IDENTIFIER) {
				{
				setState(35);
				stringelems();
				}
			}

			setState(38);
			match(ENDL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NumberlistContext extends ParserRuleContext {
		public TerminalNode BEGL() { return getToken(BooleanParser.BEGL, 0); }
		public TerminalNode ENDL() { return getToken(BooleanParser.ENDL, 0); }
		public NumberelemsContext numberelems() {
			return getRuleContext(NumberelemsContext.class,0);
		}
		public NumberlistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_numberlist; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BooleanListener ) ((BooleanListener)listener).enterNumberlist(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BooleanListener ) ((BooleanListener)listener).exitNumberlist(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BooleanVisitor ) return ((BooleanVisitor<? extends T>)visitor).visitNumberlist(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NumberlistContext numberlist() throws RecognitionException {
		NumberlistContext _localctx = new NumberlistContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_numberlist);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(40);
			match(BEGL);
			setState(42);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==DECIMAL || _la==IDENTIFIER) {
				{
				setState(41);
				numberelems();
				}
			}

			setState(44);
			match(ENDL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StringelemsContext extends ParserRuleContext {
		public List<StringtypeContext> stringtype() {
			return getRuleContexts(StringtypeContext.class);
		}
		public StringtypeContext stringtype(int i) {
			return getRuleContext(StringtypeContext.class,i);
		}
		public List<TerminalNode> SEP() { return getTokens(BooleanParser.SEP); }
		public TerminalNode SEP(int i) {
			return getToken(BooleanParser.SEP, i);
		}
		public StringelemsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stringelems; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BooleanListener ) ((BooleanListener)listener).enterStringelems(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BooleanListener ) ((BooleanListener)listener).exitStringelems(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BooleanVisitor ) return ((BooleanVisitor<? extends T>)visitor).visitStringelems(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StringelemsContext stringelems() throws RecognitionException {
		StringelemsContext _localctx = new StringelemsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_stringelems);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(46);
			stringtype();
			setState(51);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SEP) {
				{
				{
				setState(47);
				match(SEP);
				setState(48);
				stringtype();
				}
				}
				setState(53);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NumberelemsContext extends ParserRuleContext {
		public List<NumbertypeContext> numbertype() {
			return getRuleContexts(NumbertypeContext.class);
		}
		public NumbertypeContext numbertype(int i) {
			return getRuleContext(NumbertypeContext.class,i);
		}
		public List<TerminalNode> SEP() { return getTokens(BooleanParser.SEP); }
		public TerminalNode SEP(int i) {
			return getToken(BooleanParser.SEP, i);
		}
		public NumberelemsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_numberelems; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BooleanListener ) ((BooleanListener)listener).enterNumberelems(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BooleanListener ) ((BooleanListener)listener).exitNumberelems(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BooleanVisitor ) return ((BooleanVisitor<? extends T>)visitor).visitNumberelems(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NumberelemsContext numberelems() throws RecognitionException {
		NumberelemsContext _localctx = new NumberelemsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_numberelems);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			numbertype();
			setState(59);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SEP) {
				{
				{
				setState(55);
				match(SEP);
				setState(56);
				numbertype();
				}
				}
				setState(61);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NumbertypeContext extends ParserRuleContext {
		public TerminalNode DECIMAL() { return getToken(BooleanParser.DECIMAL, 0); }
		public TerminalNode IDENTIFIER() { return getToken(BooleanParser.IDENTIFIER, 0); }
		public NumbertypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_numbertype; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BooleanListener ) ((BooleanListener)listener).enterNumbertype(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BooleanListener ) ((BooleanListener)listener).exitNumbertype(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BooleanVisitor ) return ((BooleanVisitor<? extends T>)visitor).visitNumbertype(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NumbertypeContext numbertype() throws RecognitionException {
		NumbertypeContext _localctx = new NumbertypeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_numbertype);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			_la = _input.LA(1);
			if ( !(_la==DECIMAL || _la==IDENTIFIER) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StringtypeContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(BooleanParser.STRING, 0); }
		public TerminalNode IDENTIFIER() { return getToken(BooleanParser.IDENTIFIER, 0); }
		public StringtypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stringtype; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BooleanListener ) ((BooleanListener)listener).enterStringtype(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BooleanListener ) ((BooleanListener)listener).exitStringtype(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BooleanVisitor ) return ((BooleanVisitor<? extends T>)visitor).visitStringtype(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StringtypeContext stringtype() throws RecognitionException {
		StringtypeContext _localctx = new StringtypeContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_stringtype);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			_la = _input.LA(1);
			if ( !(_la==STRING || _la==IDENTIFIER) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BooleantypeContext extends ParserRuleContext {
		public BooleantypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_booleantype; }
	 
		public BooleantypeContext() { }
		public void copyFrom(BooleantypeContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class StringInBooleantypeContext extends BooleantypeContext {
		public StringtypeContext stringtype() {
			return getRuleContext(StringtypeContext.class,0);
		}
		public TerminalNode IN() { return getToken(BooleanParser.IN, 0); }
		public ListContext list() {
			return getRuleContext(ListContext.class,0);
		}
		public StringInBooleantypeContext(BooleantypeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BooleanListener ) ((BooleanListener)listener).enterStringInBooleantype(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BooleanListener ) ((BooleanListener)listener).exitStringInBooleantype(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BooleanVisitor ) return ((BooleanVisitor<? extends T>)visitor).visitStringInBooleantype(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ParenBooleanTypeContext extends BooleantypeContext {
		public TerminalNode LPAREN() { return getToken(BooleanParser.LPAREN, 0); }
		public BooleantypeContext booleantype() {
			return getRuleContext(BooleantypeContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(BooleanParser.RPAREN, 0); }
		public ParenBooleanTypeContext(BooleantypeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BooleanListener ) ((BooleanListener)listener).enterParenBooleanType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BooleanListener ) ((BooleanListener)listener).exitParenBooleanType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BooleanVisitor ) return ((BooleanVisitor<? extends T>)visitor).visitParenBooleanType(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BinaryBooleantypeContext extends BooleantypeContext {
		public BooleantypeContext left;
		public BinaryContext op;
		public BooleantypeContext right;
		public List<BooleantypeContext> booleantype() {
			return getRuleContexts(BooleantypeContext.class);
		}
		public BooleantypeContext booleantype(int i) {
			return getRuleContext(BooleantypeContext.class,i);
		}
		public BinaryContext binary() {
			return getRuleContext(BinaryContext.class,0);
		}
		public BinaryBooleantypeContext(BooleantypeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BooleanListener ) ((BooleanListener)listener).enterBinaryBooleantype(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BooleanListener ) ((BooleanListener)listener).exitBinaryBooleantype(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BooleanVisitor ) return ((BooleanVisitor<? extends T>)visitor).visitBinaryBooleantype(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class NumberInBooleantypeContext extends BooleantypeContext {
		public NumbertypeContext numbertype() {
			return getRuleContext(NumbertypeContext.class,0);
		}
		public TerminalNode IN() { return getToken(BooleanParser.IN, 0); }
		public ListContext list() {
			return getRuleContext(ListContext.class,0);
		}
		public NumberInBooleantypeContext(BooleantypeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BooleanListener ) ((BooleanListener)listener).enterNumberInBooleantype(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BooleanListener ) ((BooleanListener)listener).exitNumberInBooleantype(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BooleanVisitor ) return ((BooleanVisitor<? extends T>)visitor).visitNumberInBooleantype(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class InheritBooleantypeContext extends BooleantypeContext {
		public List<StringtypeContext> stringtype() {
			return getRuleContexts(StringtypeContext.class);
		}
		public StringtypeContext stringtype(int i) {
			return getRuleContext(StringtypeContext.class,i);
		}
		public TerminalNode SLASH() { return getToken(BooleanParser.SLASH, 0); }
		public InheritBooleantypeContext(BooleantypeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BooleanListener ) ((BooleanListener)listener).enterInheritBooleantype(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BooleanListener ) ((BooleanListener)listener).exitInheritBooleantype(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BooleanVisitor ) return ((BooleanVisitor<? extends T>)visitor).visitInheritBooleantype(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class NotBooleanTypeContext extends BooleantypeContext {
		public TerminalNode NOT() { return getToken(BooleanParser.NOT, 0); }
		public BooleantypeContext booleantype() {
			return getRuleContext(BooleantypeContext.class,0);
		}
		public NotBooleanTypeContext(BooleantypeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BooleanListener ) ((BooleanListener)listener).enterNotBooleanType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BooleanListener ) ((BooleanListener)listener).exitNotBooleanType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BooleanVisitor ) return ((BooleanVisitor<? extends T>)visitor).visitNotBooleanType(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class IdentifierBooleantypeContext extends BooleantypeContext {
		public TerminalNode IDENTIFIER() { return getToken(BooleanParser.IDENTIFIER, 0); }
		public IdentifierBooleantypeContext(BooleantypeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BooleanListener ) ((BooleanListener)listener).enterIdentifierBooleantype(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BooleanListener ) ((BooleanListener)listener).exitIdentifierBooleantype(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BooleanVisitor ) return ((BooleanVisitor<? extends T>)visitor).visitIdentifierBooleantype(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BoolBooleantypeContext extends BooleantypeContext {
		public BoolContext bool() {
			return getRuleContext(BoolContext.class,0);
		}
		public BoolBooleantypeContext(BooleantypeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BooleanListener ) ((BooleanListener)listener).enterBoolBooleantype(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BooleanListener ) ((BooleanListener)listener).exitBoolBooleantype(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BooleanVisitor ) return ((BooleanVisitor<? extends T>)visitor).visitBoolBooleantype(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class IdentifierComparatorBooleantypeContext extends BooleantypeContext {
		public Token left;
		public NonboolcomparatorContext op;
		public Token right;
		public List<TerminalNode> IDENTIFIER() { return getTokens(BooleanParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(BooleanParser.IDENTIFIER, i);
		}
		public NonboolcomparatorContext nonboolcomparator() {
			return getRuleContext(NonboolcomparatorContext.class,0);
		}
		public IdentifierComparatorBooleantypeContext(BooleantypeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BooleanListener ) ((BooleanListener)listener).enterIdentifierComparatorBooleantype(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BooleanListener ) ((BooleanListener)listener).exitIdentifierComparatorBooleantype(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BooleanVisitor ) return ((BooleanVisitor<? extends T>)visitor).visitIdentifierComparatorBooleantype(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ListComparatorBooleantypeContext extends BooleantypeContext {
		public ListContext left;
		public ListContext right;
		public TerminalNode IS() { return getToken(BooleanParser.IS, 0); }
		public List<ListContext> list() {
			return getRuleContexts(ListContext.class);
		}
		public ListContext list(int i) {
			return getRuleContext(ListContext.class,i);
		}
		public ListComparatorBooleantypeContext(BooleantypeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BooleanListener ) ((BooleanListener)listener).enterListComparatorBooleantype(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BooleanListener ) ((BooleanListener)listener).exitListComparatorBooleantype(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BooleanVisitor ) return ((BooleanVisitor<? extends T>)visitor).visitListComparatorBooleantype(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StringComparatorBooleantypeContext extends BooleantypeContext {
		public StringtypeContext left;
		public NonboolcomparatorContext op;
		public StringtypeContext right;
		public List<StringtypeContext> stringtype() {
			return getRuleContexts(StringtypeContext.class);
		}
		public StringtypeContext stringtype(int i) {
			return getRuleContext(StringtypeContext.class,i);
		}
		public NonboolcomparatorContext nonboolcomparator() {
			return getRuleContext(NonboolcomparatorContext.class,0);
		}
		public StringComparatorBooleantypeContext(BooleantypeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BooleanListener ) ((BooleanListener)listener).enterStringComparatorBooleantype(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BooleanListener ) ((BooleanListener)listener).exitStringComparatorBooleantype(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BooleanVisitor ) return ((BooleanVisitor<? extends T>)visitor).visitStringComparatorBooleantype(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class NumberComparatorBooleantypeContext extends BooleantypeContext {
		public NumbertypeContext left;
		public NonboolcomparatorContext op;
		public NumbertypeContext right;
		public List<NumbertypeContext> numbertype() {
			return getRuleContexts(NumbertypeContext.class);
		}
		public NumbertypeContext numbertype(int i) {
			return getRuleContext(NumbertypeContext.class,i);
		}
		public NonboolcomparatorContext nonboolcomparator() {
			return getRuleContext(NonboolcomparatorContext.class,0);
		}
		public NumberComparatorBooleantypeContext(BooleantypeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BooleanListener ) ((BooleanListener)listener).enterNumberComparatorBooleantype(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BooleanListener ) ((BooleanListener)listener).exitNumberComparatorBooleantype(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BooleanVisitor ) return ((BooleanVisitor<? extends T>)visitor).visitNumberComparatorBooleantype(this);
			else return visitor.visitChildren(this);
		}
	}
